--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+echo "src/main/resources/application.properties" >> .gitignore
+git add .gitignore
+git commit -m "Add application.properties to .gitignore"
+
+src/main/resources/application.properties
