--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ target/
 *.iml
 *.ipr
 
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -28,11 +29,13 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+# ignorar archivo
+.env
 
 ### VS Code ###
 .vscode/
 
-echo "src/main/resources/application.properties" >> .gitignore
+
 git add .gitignore
 git commit -m "Add application.properties to .gitignore"
 
